# project-euler

./: pyproject.toml
1/: main.py
2/: main.py
3/: main.py
4/: main.py
