[project]
name = "project-euler"
version = "0.1.0"
description = ""
authors = [
    {name = "Tariq Kamardeen",email = "csetariq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
